--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ params: {
 },
 {
   id: 31,
-  name: "Социальная поддержка детей‑сирот и детей, оставшихся без попечения родителей, в КБР",
+  name: "Социальная поддержка детей-сирот и детей, оставшихся без попечения родителей, в КБР",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
