--- a/index.html
+++ b/index.html
@@ -5,6 +5,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Профилирование услуг для участников СВО</title>
   <style>
+    /* 📱 Мобильная адаптация */
+@media (max-width: 600px) {
+
+    body {
+        padding: 10px;
+        font-size: 16px;
+    }
+
+    h1 {
+        font-size: 22px;
+        text-align: center;
+        line-height: 1.3;
+        margin-bottom: 15px;
+    }
+
+    .question {
+        margin-bottom: 12px;
+        padding: 12px;
+        border-radius: 10px;
+    }
+
+    .question label {
+        font-size: 15px;
+        line-height: 1.3;
+    }
+
+    .results {
+        margin-top: 20px;
+    }
+
+    .service-card {
+        padding: 14px;
+        margin-bottom: 14px;
+        border-radius: 10px;
+        font-size: 15px;
+        line-height: 1.4;
+    }
+
+    button {
+        width: 100%;
+        padding: 14px;
+        font-size: 16px;
+        border-radius: 10px;
+        margin-top: 10px;
+    }
+}
     body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 20px; line-height: 1.5; }
     h1 { font-size: 22px; margin-bottom: 10px; }
     h2 { font-size: 18px; margin-top: 25px; }
