--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Профилирование услуг для участников СВО</title>
   <style>
-    /* 📱 Мобильная адаптация */
 @media (max-width: 600px) {
 
     body {
@@ -70,7 +69,8 @@
 <div id="questions"></div>
 
 <button class="btn" onclick="filterServices()">Показать доступные услуги</button>
-
+<button id="downloadPdfBtn">Скачать PDF</button>
+  
 <div class="result">
   <h2>Подходящие услуги:</h2>
   <div id="servicesList"></div>
@@ -749,7 +749,46 @@ function filterServices() {
     list.appendChild(div);
   });
 }
+document.getElementById("downloadPdfBtn").addEventListener("click", () => {
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+
+    const results = document.getElementById("results");
+    const serviceCards = results.querySelectorAll(".service-card");
+
+    if (serviceCards.length === 0) {
+        alert("Нет услуг для экспорта. Сначала выполните фильтрацию.");
+        return;
+    }
+
+    let y = 10; // вертикальная позиция текста
+
+    doc.setFontSize(14);
+    doc.text("Подходящие услуги:", 10, y);
+    y += 10;
+
+    doc.setFontSize(12);
+
+    serviceCards.forEach((card, index) => {
+        const text = card.innerText.split("\n");
+
+        text.forEach(line => {
+            if (y > 280) { 
+                doc.addPage();
+                y = 10;
+            }
+            doc.text(line, 10, y);
+            y += 7;
+        });
+
+        y += 5;
+    });
+
+    doc.save("Перечень услуг.pdf");
+});
+</script>
 </script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 </html>
