--- a/index.html
+++ b/index.html
@@ -747,44 +747,53 @@ function filterServices() {
     div.className = 'service-item';
     div.textContent = (idx + 1) + '. ' + service.name;
     list.appendChild(div);
+    // Добавляем кнопку PDF
+const pdfBtn = document.createElement("button");
+pdfBtn.id = "downloadPdfBtn";
+pdfBtn.textContent = "Скачать PDF";
+pdfBtn.style.marginTop = "20px";
+pdfBtn.style.width = "100%";
+list.appendChild(pdfBtn);
   });
 }
-document.getElementById("downloadPdfBtn").addEventListener("click", () => {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
+document.addEventListener("click", function(e) {
+    if (e.target && e.target.id === "downloadPdfBtn") {
+        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF();
 
-    const results = document.getElementById("results");
-    const serviceCards = results.querySelectorAll(".service-card");
+        const list = document.getElementById("servicesList");
+        const serviceItems = list.querySelectorAll(".service-item");
 
-    if (serviceCards.length === 0) {
-        alert("Нет услуг для экспорта. Сначала выполните фильтрацию.");
-        return;
-    }
+        if (serviceItems.length === 0) {
+            alert("Нет услуг для экспорта. Сначала выполните фильтрацию.");
+            return;
+        }
 
-    let y = 10; // вертикальная позиция текста
+        let y = 10;
 
-    doc.setFontSize(14);
-    doc.text("Подходящие услуги:", 10, y);
-    y += 10;
+        doc.setFontSize(14);
+        doc.text("Подходящие услуги:", 10, y);
+        y += 10;
 
-    doc.setFontSize(12);
+        doc.setFontSize(12);
 
-    serviceCards.forEach((card, index) => {
-        const text = card.innerText.split("\n");
+        serviceItems.forEach(item => {
+            const lines = doc.splitTextToSize(item.innerText, 180);
 
-        text.forEach(line => {
-            if (y > 280) { 
-                doc.addPage();
-                y = 10;
-            }
-            doc.text(line, 10, y);
-            y += 7;
+            lines.forEach(line => {
+                if (y > 280) {
+                    doc.addPage();
+                    y = 10;
+                }
+                doc.text(line, 10, y);
+                y += 7;
+            });
+
+            y += 5;
         });
 
-        y += 5;
-    });
-
-    doc.save("Перечень услуг.pdf");
+        doc.save("Перечень услуг.pdf");
+    }
 });
 </script>
 
