--- a/index.html
+++ b/index.html
@@ -747,6 +747,7 @@ function filterServices() {
     div.textContent = (idx + 1) + '. ' + service.name;
     list.appendChild(div);
   });
+  doc.setFont("Roboto-Regular", "normal");
 
   // 👉 ДОБАВЛЯЕМ КНОПКУ PDF В КОНЕЦ СПИСКА
   const pdfBtn = document.createElement("button");
@@ -784,6 +785,7 @@ document.addEventListener("click", function(e) {
             lines.forEach(line => {
                 if (y > 280) {
                     doc.addPage();
+                    doc.setFont("Roboto-Regular", "normal");
                     y = 10;
                 }
                 doc.text(line, 10, y);
