--- a/index.html
+++ b/index.html
@@ -796,5 +796,20 @@ document.addEventListener("click", function(e) {
 });
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script>
+  // 🔹 ТВОЙ КОД
+  // questions
+  // services
+  // filterServices()
+  // обработчик PDF
+</script>
+
+<!-- 🔹 jsPDF библиотека -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+<!-- 🔹 КИРИЛЛИЧЕСКИЙ ШРИФТ (ставим ПОСЛЕ jsPDF) -->
+<script src="https://rawcdn.githack.com/MrRio/jsPDF/master/examples/fonts/Roboto-Regular-normal.js"></script>
+</body>
+</html>
 </body>
 </html>
