--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
   <h2>Подходящие услуги:</h2>
   <div id="servicesList"></div>
 </div>
+  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/fonts/Roboto-Regular-normal.js"></script>
 
 <script>
 // 1. Список параметров (вопросов) — это твой Лист2
