--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <h1>Перечень услуг, доступных к получению участникам СВО и членам их семей</h1>
 
-<h2>Отметьте параметры, которые относятся к заявителю</h2>
+<h2>Выберете параметры, которые соответствуют заявителям</h2>
 
 <div id="questions"></div>
 
@@ -802,5 +802,9 @@ document.addEventListener("click", function(e) {
 
 <!-- jsPDF -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+<!-- Рабочий шрифт Roboto с кириллицей -->
+<script src="https://rawcdn.githack.com/MrRio/jsPDF/master/examples/fonts/Roboto-Regular-normal.js"></script>
+
 </body>
 </html>
