--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <h1>Перечень услуг, доступных к получению участникам СВО и членам их семей</h1>
 
-<h2>Выберете параметры, которые соответствуют заявителям</h2>
+<h2>Выберете параметры, которые соответствуют заявителю</h2>
 
 <div id="questions"></div>
 
