--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
   <div id="servicesList"></div>
 </div>
   
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/fonts/Roboto-Regular-normal.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
 
 <script>
 // 1. Список параметров (вопросов) — это твой Лист2
@@ -758,45 +758,41 @@ function filterServices() {
 
 // 👉 Обработчик кнопки PDF
 document.addEventListener("click", function(e) {
-    if (e.target && e.target.id === "downloadPdfBtn") {
+  if (e.target && e.target.id === "downloadPdfBtn") {
 
-        const { jsPDF } = window.jspdf;
-        const doc = new jsPDF();
-        doc.setFont("Roboto-Regular", "normal");
+    const list = document.getElementById("servicesList");
+    const serviceItems = list.querySelectorAll(".service-item");
 
-        const list = document.getElementById("servicesList");
-        const serviceItems = list.querySelectorAll(".service-item");
-
-        if (serviceItems.length === 0) {
-            alert("Нет услуг для экспорта.");
-            return;
-        }
-
-        let y = 10;
-
-        doc.setFontSize(14);
-        doc.text("Подобранные услуги:", 10, y);
-        y += 10;
-
-        doc.setFontSize(12);
-
-        serviceItems.forEach(item => {
-            const lines = doc.splitTextToSize(item.innerText, 180);
-
-            lines.forEach(line => {
-                if (y > 280) {
-                    doc.addPage();
-                    y = 10;
-                }
-                doc.text(line, 10, y);
-                y += 7;
-            });
-
-            y += 5;
-        });
-
-        doc.save("Перечень услуг.pdf");
+    if (serviceItems.length === 0) {
+      alert("Нет услуг для экспорта.");
+      return;
     }
+
+    // Формируем массив строк
+    const lines = [];
+    lines.push({ text: "Подобранные услуги:", style: "header" });
+
+    serviceItems.forEach(item => {
+      lines.push({ text: item.innerText, margin: [0, 5, 0, 0] });
+    });
+
+    // Документ pdfmake
+    const docDefinition = {
+      content: lines,
+      styles: {
+        header: {
+          fontSize: 16,
+          bold: true,
+          margin: [0, 0, 0, 10]
+        }
+      },
+      defaultStyle: {
+        font: "Roboto"
+      }
+    };
+
+    pdfMake.createPdf(docDefinition).download("Перечень услуг.pdf");
+  }
 });
 </script>
 
