--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <h1>Перечень услуг, доступных к получению участникам СВО и членам их семей</h1>
 
-<h2>Выберете параметры, которые соответствуют заявителю</h2>
+<h2>Выберете категории, которые Вам соответствуют </h2>
 
 <div id="questions"></div>
 
@@ -79,7 +79,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
 
 <script>
-// 1. Список параметров (вопросов) — это твой Лист2
+// 1. Список категорий
 const questions = [
   "Получено удостоверение Ветерана боевых действий",
   "Получена справка об участии в СВО",
@@ -98,13 +98,10 @@ const questions = [
   "Медицинское заключение для получения технических средств реабилитации",
   "Справка о ранении",
   "Наличие имущества на правах аренды, собственности",
-  "Кем вы являетесь для участника СВО?",
-  "Размер дохода менее 1 МРОТ?"
+  "Являетесь родственником участника СВО",
+  "Размер дохода менее 1 МРОТ"
 ];
 
-// 2. База услуг — сюда нужно перенести данные из Лист1
-// ВАЖНО: здесь сейчас только ПРИМЕРЫ.
-// Тебе нужно по аналогии добавить все 59 услуг и расставить true/false по параметрам.
 const services = [
    {
   id: 1,
@@ -188,7 +185,7 @@ const services = [
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
     "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
@@ -240,7 +237,7 @@ const services = [
     "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
     "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
     "Наличие несовершеннолетних детей": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
@@ -250,7 +247,7 @@ const services = [
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
@@ -311,7 +308,7 @@ const services = [
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником для участника СВО": true
   }
 },
 {
@@ -338,7 +335,7 @@ const services = [
     "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
     "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
     "Наличие несовершеннолетних детей": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником для участника СВО": true
   }
 },
 {
@@ -380,7 +377,7 @@ const services = [
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником для участника СВО": true
   }
 },
 {
@@ -425,7 +422,7 @@ params: {
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
     "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником для участника СВО": true
   }
 },
 {
@@ -435,7 +432,7 @@ params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
@@ -467,7 +464,7 @@ params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
@@ -530,7 +527,7 @@ params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
@@ -550,7 +547,7 @@ params: {
   name: "Ежемесячное пособие на ребёнка военнослужащего, проходящего службу по призыву",
   params: {
     "Наличие несовершеннолетних детей": true,
-    "Кем вы являетесь для участника СВО?": true,
+    "Являетесь родственником участника СВО": true,
     "Получаю ежемесячную денежную выплату": true
   }
 },
@@ -574,7 +571,7 @@ params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
-    "Кем вы являетесь для участника СВО?": true,
+    "Являетесь родственником участника СВО": true,
     "Получаю ежемесячную денежную выплату": true
   }
 },
@@ -604,7 +601,7 @@ params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
