--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ const questions = [
 const services = [
    {
   id: 1,
-  name: "Взимание и использование родительской платы за присмотр и уход за воспитанником",
+  name: "Взимание и использование родительской платы за присмотр и уход за воспитанником в образовательных учреждениях , реализующих основную образовательную программу дошкольного образования",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -129,7 +129,7 @@ const services = [
 },
 {
   id: 3,
-  name: "Предоставление отсрочки уплаты арендной платы по договорам аренды муниципального имущества",
+  name: "Предоставление отсрочки уплаты арендной платы по договорам аренды муниципального имущества в связи с частичной мобилизацией",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -138,7 +138,7 @@ const services = [
 },
 {
   id: 4,
-  name: "Обеспечение бесплатным питанием обучающихся муниципальных общеобразовательных учреждений",
+  name: "Обеспечение бесплатным питанием обучающихся муниципальных общеобразовательных учреждений муниципальных районов КБР",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -150,7 +150,7 @@ const services = [
 },
 {
   id: 5,
-  name: "Прием на обучение по образовательным программам начального, основного и среднего общего образования",
+  name: "Прием на обучение по образовательным программам начального, основного и среднего общего образования муниципальных районов КБР",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -162,7 +162,7 @@ const services = [
 },
 {
   id: 6,
-  name: "Бесплатное предоставление земельных участков для индивидуального жилищного строительства",
+  name: "О бесплатном предоставлении в собственность отдельным категориям граждан земельных участков для индивидуального жилищного строительства на территории Кабардино-Балкарской Республики",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true
@@ -170,7 +170,7 @@ const services = [
 },
 {
   id: 7,
-  name: "Освобождение от начисления пеней за ЖКУ для мобилизованных и их семей",
+  name: "Освобождение от начисления пеней в случае несвоевременного и (или) неполного внесения гражданами Российской Федерации заключившими контракт о прохождении военной службы в связи с призывом на военную службу по мобилизации в Вооруженные Силы Российской Федерации и члены их семей платы за жилое помещение и коммунальные услуги взноса на капитальный ремонт общего имущества в многоквартирном доме установленных жилищным законодательством Российской Федерации",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -179,7 +179,7 @@ const services = [
 },
 {
   id: 8,
-  name: "Бесплатное посещение детьми кружков и секций для семей участников СВО",
+  name: "Предоставление семьям участников специальной военной операции права бесплатного посещения детьми занятий по дополнительным общеобразовательным программам в региональных и муниципальных организациях (кружки, секции и иные подобные занятия) (в том числе в случае гибели (смерти) участников специальной военной операции)",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -242,7 +242,7 @@ const services = [
 },
 {
   id: 14,
-  name: "Единовременная материальная помощь членам семей погибших (умерших) военнослужащих",
+  name: "Единовременная материальная помощь членам семей погибших (умерших) военнослужащих , лиц, проходивших службу в войсках национальной гвардии Российской Федерации",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -266,7 +266,7 @@ const services = [
 },
 {
   id: 16,
-  name: "Единовременная материальная помощь военнослужащим при получении увечий",
+  name: "Единовременная материальная помощь военнослужащим, лицам, проходящим службу в войсках Росгвардии:при получении легкого увечья (ранения, травмы, контузии) - в размере 100000,0 рублей; при получении тяжкого увечья (ранения, травмы, контузии) - в размере 300000,0 рублей; при получении увечья (ранения, травмы, контузии), не входящего в перечень увечий (ранений, травм, контузий),  - в размере 100000 рублей.",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -275,7 +275,7 @@ const services = [
 },
 {
   id: 17,
-  name: "Единовременная материальная помощь добровольцам при получении вреда здоровью",
+  name: "Единовременная материальная помощь лицам, поступившим в созданные по решению органов государственной власти Российской Федерации добровольческие формирования); при получении в результате легкого вреда здоровью - в размере 100000 рублей; при получении в результате вреда здоровью средней тяжести - в размере 200000 рублей; при получении в результате тяжкого вреда здоровью - в размере 300000 рублей",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -284,7 +284,8 @@ const services = [
 },
 {
   id: 18,
-  name: "Единовременная материальная помощь сотрудникам СК РФ, получившим вред здоровью",
+  name: "Единовременная материальная помощь сотрудникам расположенных на территории КБР следственных органов СК РФ (кроме военнослужащих), сотрудников, назначенных в порядке перевода из указанных органов в следственные органы СК РФ по Донецкой Народной Республике, Луганской Народной Республике, Запорожской области или Херсонской области (кроме военнослужащих), получивших на территориях Украины, Донецкой Народной Республики, Луганской Народной Республики, Запорожской области, Херсонской области  при получении в результате легкого вреда здоровью - в размере 100000 рублей; при получении в результате вреда здоровью средней тяжести - в размере 200000 рублей; при получении в результате тяжкого вреда здоровью - в размере 300000 рублей
+",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -293,7 +294,7 @@ const services = [
 },
 {
   id: 19,
-  name: "Оказание медицинской помощи участникам СВО во внеочередном порядке",
+  name: "Оказание медицинской помощи в медицинских организациях во внеочередном порядке участникам специальной военной операции",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -303,7 +304,7 @@ const services = [
 },
 {
   id: 20,
-  name: "Бесплатное посещение культурно-массовых мероприятий участниками СВО и их семьями",
+  name: "Обеспечение бесплатного посещения культурно-массовых мероприятий на территории Кабардино-Балкарской Республики для лиц участников СВО и членам семей принимающих (принимавших) участие в специальной военной операции",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -327,7 +328,7 @@ const services = [
 },
 {
   id: 22,
-  name: "Предоставление путёвок на отдых и оздоровление детям участников СВО",
+  name: "Предоставление в первоочередном порядке путевок на отдых и оздоровление детям участников СВО, внеочередное направление детей на медико-социальную реабилитацию в ГКУ "Базовый республиканский детский социально-реабилитационный центр "Радуга"",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -340,7 +341,7 @@ const services = [
 },
 {
   id: 23,
-  name: "Предоставление в прокат технических средств реабилитации членам семей участников СВО",
+  name: "Предоставление в прокат технических средств реабилитации для членов семей граждан, участвующих в специальной военной операции",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -352,7 +353,7 @@ const services = [
 },
 {
   id: 24,
-  name: "Организация профессионального обучения и содействие в поиске работы",
+  name: "Организация профессионального обучения и дополнительного профессионального образования, содействие в поиске подходящей работы",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -372,7 +373,7 @@ const services = [
 },
 {
   id: 26,
-  name: "Бесплатное посещение спортивных объектов участниками СВО и их семьями",
+  name: "Предоставление участникам специальной военной операции и членам их семей права бесплатного посещения спортивных объектов",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -394,7 +395,7 @@ const services = [
 },
 {
   id: 28,
-  name: "Бесплатное посещение культурно-массовых мероприятий, кружков и секций",
+  name: "Обеспечение бесплатного посещения культурно-массовых мероприятий, кружков и секций",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -437,7 +438,7 @@ params: {
 },
 {
   id: 32,
-  name: "Ежемесячная денежная выплата 25 000 рублей мобилизованным военнослужащим",
+  name: "Ежемесячная денежная выплата в размере 25 000 рублей военнослужащим призванным военным комиссариатом Кабардино-Балкарской Республики на военную службу в соответствии с Указом Президента Российской Федерации от 21 сентября 2022 г. № 647 "Об объявлении частичной мобилизации в Российской Федерации" в период прохождения ими военной службы",
   params: {
     "Получена справка об участии в СВО": true
   }
@@ -459,7 +460,7 @@ params: {
 },
 {
   id: 34,
-  name: "Академическое право на переход с платного на бесплатное обучение (СПО/ВУЗ)",
+  name: "Академическое право на переход лиц, обучающихся по образовательным программам среднего профессионального и высшего образования, с платного обучения на бесплатное",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -479,7 +480,7 @@ params: {
 },
 {
   id: 36,
-  name: "Право на обучение на подготовительных отделениях ВУЗов по отдельной квоте",
+  name: "Право на прием на обучение на подготовительные отделения в федеральные государственные образовательные организации высшего образования за счет бюджетных ассигнований федерального бюджета, бюджетов субъектов Российской Федерации и местных бюджетов в пределах отдельной квоты",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -515,7 +516,7 @@ params: {
 },
 {
   id: 40,
-  name: "Консультирование по вопросам земли и недвижимости",
+  name: "Консультирование по вопросам в сфере земли и недвижимости, в том числе оформления прав собственности на недвижимость",
   params: {
     "Получено удостоверение Ветерана боевых действий": true
   }
@@ -553,7 +554,7 @@ params: {
 },
 {
   id: 44,
-  name: "Одновременное получение двух пенсий (по инвалидности/выслуге и страховой по старости)",
+  name: "Одновременное получение двух пенсий (пенсия за выслугу лет или пенсия по инвалидности, предусмотренные законом Закон РФ от 12.02.1993 № 4468-1 и страховая пенсия по старости)",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -566,7 +567,7 @@ params: {
 },
 {
   id: 45,
-  name: "Меры социальной поддержки военнослужащим и членам их семей (выплаты и компенсации)",
+  name: "Предоставление некоторых мер социальной поддержки в виде денежных выплат и компенсаций военнослужащим и членам их семей",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -596,7 +597,7 @@ params: {
 },
 {
   id: 48,
-  name: "Одновременное получение пенсии по потере кормильца и социальной пенсии по инвалидности",
+  name: "Одновременное получение пенсии по случаю потери кормильца и социальной пенсии по инвалидности детьми-инвалидам и неработающим инвалидам с детства, потерявшими родителей вследствие гибели в период прохождения военной службы или пребывании в добровольческом формировании, а также смерти вследствие военной травмы после увольнения с военной службы или пребывания в добровольческом формировании",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -614,7 +615,7 @@ params: {
 },
 {
   id: 50,
-  name: "Отсрочка уплаты аренды или расторжение договора аренды федерального имущества без штрафов",
+  name: "Предоставление отсрочки уплаты арендной платы либо возможности расторжения договоров аренды федерального имущества, составляющего государственную казну Российской Федерации, без применения штрафных санкций физическим лицам, в том числе ИП или являющимся учредителем и руководителем юридического лица, призванным на военную службу по мобилизации в Вооруженные Силы Российской Федерации либо заключившим контракт о добровольном содействии в выполнении задач, возложенных на Вооруженные Силы Российской Федерации, на период прохождения военной службы (оказания добровольного содействия)",
   params: {
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true
@@ -622,7 +623,7 @@ params: {
 },
 {
   id: 51,
-  name: "Приём заявлений о перерасчёте транспортного, земельного и имущественного налога",
+  name: "Прием заявления о перерасчете суммы ранее исчисленного транспортного налога, земельного налога, налога на имущество физических лиц, налога на доходы физических лиц.",
   params: {
     "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
     "Наличие имущества на правах аренды, собственности": true
@@ -630,7 +631,7 @@ params: {
 },
 {
   id: 52,
-  name: "Приём заявлений для размещения сведений о транспортном средстве инвалида",
+  name: "Прием заявлений для размещения сведений о транспортном средстве, управляемом инвалидом, или транспортном средстве, перевозящем инвалида и (или) ребенка-инвалида, в федеральной государственной информационной системе «Единая централизованная цифровая платформа в социальной сфере»",
   params: {
     "Есть инвалидность": true,
     "Справка МСЭ (медико-социальной экспертизы)": true,
