--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ const services = [
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
-    "Являетесь родственником для участника СВО": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
@@ -328,7 +328,7 @@ const services = [
 },
 {
   id: 22,
-  name: "Предоставление в первоочередном порядке путевок на отдых и оздоровление детям участников СВО, внеочередное направление детей на медико-социальную реабилитацию в ГКУ "Базовый республиканский детский социально-реабилитационный центр "Радуга"",
+  name: name: "Предоставление в первоочередном порядке путевок на отдых и оздоровление детям участников СВО, внеочередное направление детей на медико-социальную реабилитацию в ГКУ 'Базовый республиканский детский социально-реабилитационный центр «Радуга»'",,
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -336,7 +336,7 @@ const services = [
     "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
     "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
     "Наличие несовершеннолетних детей": true,
-    "Являетесь родственником для участника СВО": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
@@ -370,7 +370,7 @@ const services = [
     "Есть инвалидность": true,
     "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true
   }
-},
+}
 {
   id: 26,
   name: "Предоставление участникам специальной военной операции и членам их семей права бесплатного посещения спортивных объектов",
