--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ const services = [
 },
 {
   id: 22,
-  name: name: "Предоставление в первоочередном порядке путевок на отдых и оздоровление детям участников СВО, внеочередное направление детей на медико-социальную реабилитацию в ГКУ 'Базовый республиканский детский социально-реабилитационный центр «Радуга»'",,
+  name: name: "Предоставление в первоочередном порядке путевок на отдых и оздоровление детям участников СВО, внеочередное направление детей на медико-социальную реабилитацию в ГКУ 'Базовый республиканский детский социально-реабилитационный центр «Радуга»'",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
