--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ const services = [
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
-    "Являетесь родственником для участника СВО": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
@@ -423,7 +423,7 @@ params: {
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
     "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
-    "Являетесь родственником для участника СВО": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
@@ -475,7 +475,7 @@ params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
@@ -485,7 +485,7 @@ params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
-    "Кем вы являетесь для участника СВО?": true
+    "Являетесь родственником участника СВО": true
   }
 },
 {
@@ -683,7 +683,7 @@ params: {
   id: 58,
   name: "Предоставление мер поддержки семьям участников СВО",
   params: {
-    "Кем вы являетесь для участника СВО?": true,
+    "Являетесь родственником участника СВО": true,
     "Наличие несовершеннолетних детей": true
   }
 },
