--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ const services = [
 },
 {
   id: 22,
-  name: name: "Предоставление в первоочередном порядке путевок на отдых и оздоровление детям участников СВО, внеочередное направление детей на медико-социальную реабилитацию в ГКУ 'Базовый республиканский детский социально-реабилитационный центр «Радуга»'",
+ name: "Предоставление в первоочередном порядке путевок на отдых и оздоровление детям участников СВО, внеочередное направление детей на медико-социальную реабилитацию в ГКУ 'Базовый республиканский детский социально-реабилитационный центр «Радуга»'",
   params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
@@ -370,7 +370,7 @@ const services = [
     "Есть инвалидность": true,
     "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true
   }
-}
+},
 {
   id: 26,
   name: "Предоставление участникам специальной военной операции и членам их семей права бесплатного посещения спортивных объектов",
