--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ const services = [
 {
   id: 30,
   name: "Внеочередное обслуживание в МФЦ",
-params: {
+  params: {
     "Получено удостоверение Ветерана боевых действий": true,
     "Получена справка об участии в СВО": true,
     "Есть инвалидность": true,
@@ -438,7 +438,7 @@ params: {
 },
 {
   id: 32,
-  name: "Ежемесячная денежная выплата в размере 25 000 рублей военнослужащим призванным военным комиссариатом Кабардино-Балкарской Республики на военную службу в соответствии с Указом Президента Российской Федерации от 21 сентября 2022 г. № 647 "Об объявлении частичной мобилизации в Российской Федерации" в период прохождения ими военной службы",
+  name: "Ежемесячная денежная выплата в размере 25 000 рублей военнослужащим призванным военным комиссариатом Кабардино-Балкарской Республики на военную службу в соответствии с Указом Президента Российской Федерации от 21 сентября 2022 г. № 647 'Об объявлении частичной мобилизации в Российской Федерации' в период прохождения ими военной службы",
   params: {
     "Получена справка об участии в СВО": true
   }
