--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ const services = [
   id: 56,
   name: "Предоставление мер поддержки семьям с низким доходом",
   params: {
-    "Размер дохода менее 1 МРОТ?": true
+    "Размер дохода менее 1 МРОТ": true
   }
 },
 {
