--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     }
 
     h1 {
-        font-size: 22px;
-        text-align: center;
-        line-height: 1.3;
-        margin-bottom: 15px;
-    }
+  text-align: center;
+  margin-top: 20px;
+  font-weight: 700;
+}
 
     .question {
         margin-bottom: 12px;
@@ -53,6 +52,7 @@
     body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 20px; line-height: 1.5; }
     h1 { font-size: 22px; margin-bottom: 10px; }
     h2 { font-size: 18px; margin-top: 25px; }
+    .que18px; margin-top: 25px; }
     .question { margin-bottom: 6px; }
     .btn { margin-top: 15px; padding: 8px 16px; cursor: pointer; }
     .result { margin-top: 25px; }
@@ -69,9 +69,10 @@
 <div id="questions"></div>
 
 <button class="btn" onclick="filterServices()">Показать доступные услуги</button>
-  
-<div class="result">
-  <h2>Подходящие услуги:</h2>
+
+<h2 id="resultsTitle" style="display:none; margin-top:25px;">Подходящие услуги:</h2>
+
+<div class="result"
   <div id="servicesList"></div>
 </div>
   
@@ -714,6 +715,7 @@ questions.forEach((q, index) => {
 
 // 4. Логика фильтрации
 function filterServices() {
+  document.getElementById("resultsTitle").style.display = "block";
   const selectedParams = [];
   questions.forEach((q, index) => {
     const checkbox = document.getElementById('q_' + index);
