--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
     }
 }
     body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 20px; line-height: 1.5; }
-    h1 { font-size: 22px; margin-bottom: 10px; }
+    h1 {
+  font-size: 22px;
+  margin-bottom: 10px;
+  text-align: center;
+}
     h2 { font-size: 18px; margin-top: 25px; }
     .que18px; margin-top: 25px; }
     .question { margin-bottom: 6px; }
