--- a/index.html
+++ b/index.html
@@ -786,7 +786,6 @@ document.addEventListener("click", function(e) {
       return;
     }
 
-    // Формируем массив строк
     const lines = [];
     lines.push({ text: "Подобранные услуги:", style: "header" });
 
@@ -794,7 +793,6 @@ document.addEventListener("click", function(e) {
       lines.push({ text: item.innerText, margin: [0, 5, 0, 0] });
     });
 
-    // Документ pdfmake
     const docDefinition = {
       content: lines,
       styles: {
@@ -803,16 +801,15 @@ document.addEventListener("click", function(e) {
           bold: true,
           margin: [0, 0, 0, 10]
         }
-      },
-     };
+      }
+    };
 
     const pdf = pdfMake.createPdf(docDefinition);
 
-    // 👉 ГИБРИД: телефоны открывают, ПК скачивает
     if (/Android|iPhone|iPad/i.test(navigator.userAgent)) {
-      pdf.open(); // мобильные — открыть в новой вкладке
+      pdf.open();
     } else {
-      pdf.download("Перечень услуг.pdf"); // ПК — скачать
+      pdf.download("Перечень услуг.pdf");
     }
   }
 });
