--- a/index.html
+++ b/index.html
@@ -17,13 +17,7 @@
   margin-top: 20px;
   font-weight: 700;
 }
-
-    .question {
-        margin-bottom: 12px;
-        padding: 3px;
-        border-radius: 10px;
-    }
-
+    
     .question label {
         font-size: 15px;
         line-height: 1.3;
@@ -41,13 +35,6 @@
         line-height: 1.4;
     }
 
-    button {
-        width: 100%;
-        padding: 14px;
-        font-size: 16px;
-        border-radius: 10px;
-        margin-top: 10px;
-    }
 }
     body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 20px; line-height: 1.5; }
     h1 {
@@ -55,12 +42,14 @@
   margin-bottom: 10px;
   text-align: center;
 }
-    h2 { font-size: 18px; margin-top: 25px; }
-    .question { margin-bottom: 6px; }
-    .btn { margin-top: 15px; padding: 8px 16px; cursor: pointer; }
-    .result { margin-top: 25px; }
-    .service-item { margin-bottom: 4px; }
-    .note { color: #666; font-size: 13px; margin-top: 10px; }
+/* Подзаголовки */
+h2 {
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 25px;
+    margin-bottom: 12px;
+    color: #562212;
+}
   </style>
 </head>
 <body>
