--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Профилирование услуг для участников СВО</title>
   <style>
+<style>
 @media (max-width: 600px) {
-
     body {
         padding: 10px;
         font-size: 16px;
     }
 
     h1 {
-  text-align: center;
-  margin-top: 20px;
-  font-weight: 700;
-}
+        text-align: center;
+        margin-top: 20px;
+        font-weight: 700;
+    }
     
     .question label {
         font-size: 15px;
@@ -34,14 +34,16 @@
         font-size: 15px;
         line-height: 1.4;
     }
+}
 
+body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 20px; line-height: 1.5; }
+
+h1 {
+    font-size: 22px;
+    margin-bottom: 10px;
+    text-align: center;
 }
-    body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 20px; line-height: 1.5; }
-    h1 {
-  font-size: 22px;
-  margin-bottom: 10px;
-  text-align: center;
-}
+
 /* Подзаголовки */
 h2 {
     font-size: 18px;
@@ -50,6 +52,30 @@ h2 {
     margin-bottom: 12px;
     color: #562212;
 }
+
+/* Кнопка в стиле МФЦ */
+.btn {
+    display: block;
+    width: 100%;
+    text-align: center;
+    background: #ed5338; /* фирменный красный */
+    color: #fff;
+    padding: 14px 0;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+    margin-top: 20px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    transition: background 0.2s ease, box-shadow 0.2s ease;
+}
+
+.btn:hover {
+    background: #d9482f;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.15);
+}
+</style>
   </style>
 </head>
 <body>
