--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@ h2 {
 <div id="questions"></div>
 
 <button class="btn" onclick="filterServices()">Показать доступные услуги</button>
-
+<button class="btn" id="downloadPdfBtn" style="display:none;">Скачать PDF</button>
+  
 <h2 id="resultsTitle" style="display:none; margin-top:25px;">Подходящие услуги:</h2>
 
 <div class="result"
